# Bazel_Cpp_Template

./: .bazelrc  .gitignore  .pre-commit-config.yaml  MODULE.bazel  Makefile  README.md  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json  postCreateScript.sh
.github/workflows/: build.yml  dependabot-pr.yaml  pre-commit-pr.yaml  readme-checker.yaml
Makefiles/: debug.mk  docker.mk  out.mk  rules.mk  vsc.mk
bazel_cpp_template/: BUILD
cfg/: .env
dockerfiles/: Dockerfile  Dockerfile.debug
project/: BUILD
project/lib/: BUILD
project/lib/src/: hello-time.cc
project/src/: hello-greet.cc  main.cc
