###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

"""
This module defines Bazel dependencies for the Hedron Compile Commands Extractor.
It specifies the `hedron_compile_commands` dependency and includes a Git
override to ensure a specific commit of the `hedron_compile_commands` repository
is used in the build. This file serves as part of the configuration to manage
external dependencies within a Bazel project.

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor

For more details about Bazel's new external dependency management system, see:
https://github.com/bazelbuild/bazel/issues/18958
"""
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
